kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogify-frontend
  namespace: blogify
  labels:
    app.kubernetes.io/name: blogify-frontend
    app.kubernetes.io/part-of: blogify
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: blogify-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blogify-frontend
        app.kubernetes.io/part-of: blogify
        app.kubernetes.io/component: frontend
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: frontend
          image: ghcr.io/Pradeepks01/Blogify/blogify-frontend:27a9f36
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # Nginx needs write for cache/pid
            runAsNonRoot: true
            runAsUser: 101 # nginx user UID in alpine
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: blogify-frontend
  namespace: blogify
  labels:
    app.kubernetes.io/name: blogify-frontend
    app.kubernetes.io/part-of: blogify
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: blogify-frontend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
