kubernetes/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blogify-db-allow-backend-only
  namespace: blogify
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blogify-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: blogify-backend
      ports:
        - port: 5432
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blogify-backend-allow-frontend-only
  namespace: blogify
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blogify-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: blogify-frontend
      ports:
        - port: 5000
          protocol: TCP
